--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,27 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :price %>
-    <%= f.text_field :price %>
+    <div class="input-group">
+      <div class="input-group-addon">
+        $
+      </div>
+      <%= f.text_field :price, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :quantity %>
-    <%= f.number_field :quantity %>
+    <%= f.number_field :quantity, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :category_id %>
-    <%= f.select :category_id, @categories, {} %>
+    <%= f.select :category_id, @categories, {}, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit "#{@action} Product", class: "btn btn-success" %>
   </div>
 <% end %>
